<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mtc_py</name>
  <version>0.1.0</version>
  <description>Python MTC motion planning pipeline (mirror of mtc_pipeline)</description>
  <maintainer email="abondada@bnl.gov">abondada</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Action interfaces (separated package) -->
  <depend>mtc_interfaces</depend>

  <!-- ROS 2 core -->
  <depend>rclpy</depend>
  <exec_depend>python3-yaml</exec_depend>

  <!-- MoveIt and MTC -->
  <depend>moveit_task_constructor_core</depend>
  <depend>moveit_ros_planning_interface</depend>

  <!-- TF2 -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <exec_depend>tf_transformations</exec_depend>

  <!-- Vision -->
  <depend>zivid_interfaces</depend>

  <!-- Pipettor (calls C++ server via action) -->
  <depend>mtc_pipeline</depend>

  <!-- Messages -->
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
