<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5e_moveit_config</name>
  <version>0.4.0</version>
  <description>
     Unified MoveIt configuration for UR5e with parameterized gripper support.
     Supports: none (standalone), epick, hande, 2fg7, pipettor via gripper:= launch arg.
  </description>
  <maintainer email="abondada@bnl.gov">abondada</maintainer>

  <license>BSD</license>

  <author email="abondada@bnl.gov">abondada</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>ur5e_robot_description</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
